--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,12 @@
 
 <html>
 <head>
-<title> Social Tech </title>
+<title> Divina Astúcia Livraria </title>
 <meta charset="utf-8">
-<meta name="description" content ="Atual time do Boston celtics">
+<meta name="description" content ="Conheça a Livraria Divina Astúcia">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="Vitor Carpes"> 
-<meta name="keywords" content="Celtics, Boston,Tatum, NBA">
+<meta name="author" content="Igor, Lucas Pereira Carvalho, Maycon Theodoro, Messias Assis, Victor Rodrigues, Vitor Carpes"> 
+<meta name="keywords" content="Livraria, Livros, Literatura, escrita">
 <link rel="stylesheet" href="Css/celtics.css">
 
 </head>
@@ -27,10 +27,10 @@
             </nav>
         
     </header>
-    <h1> Boston celtics</h1>
+    <h1> Divina Astúcia Livros</h1>
 <figure>
     <a href="https://www.google.com/search?q=celtics&rlz=1C1AWUA_enBR912BR912&oq=celtics&aqs=chrome.0.69i59j0i512j46i512j0i512l2j69i61l2j69i60.6896j1j4&sourceid=chrome&ie=UTF-8#sie=t;/m/0bwjj;3;/m/05jvx;st;fp;1;;">
-    <img src="images/celtics.jpeg" alt="Titulares do celtics" width="350" height="350">
+    <img src="imagens/imagem1.jpeg" alt="Titulares do celtics" width="350" height="350">
     </a>
 
 </figure>
